rework inclusion of figure so do not need knitr, which is (for now?) causing GHA failure

--- a/index.qmd
+++ b/index.qmd
@@ -6,8 +6,9 @@ title: "JASA Reproducibility Award"
 #| fig-width: 1
 #| fig-align: "center"
 #| echo: false
-knitr::include_graphics("img/jasa_img.png")
 ```
+
+![](img/jasa_img.png){fig-alt="JASA reproducibility award logo"}
 
 # Overview
 
